fix: Fix table horizontal scrolling

--- a/assets/sass/document.scss
+++ b/assets/sass/document.scss
@@ -103,6 +103,9 @@ main.content {
   }
 
   table {
+    display: block;
+    overflow-x: scroll;
+    white-space: nowrap;
     border-collapse: collapse;
 
     td, th {
